retrofit lib; add cider repl